<resources>
    
    <string name="app_name">NanoDegree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_btn_name">SPOTIFY STREAMER</string>
    <string name="scores_app_btn_name">SCORES APP</string>
    <string name="library_app_btn_name">LIBRARY APP</string>
    <string name="build_it_bigger_btn_name">BUILD IT BIGGER</string>
    <string name="xyz_reader_btn_name">XYZ READER</string>
    <string name="capstone_myApp_btn_name">CAPSTONE: MY APP</string>
    <string name="nano_launcher_title_name">NANO LAUNCHER</string>
    <string name="title_activity_spotify_streamer_main">Spotify Streamer</string>
    <string name="title_activity_spotify_top10">Top 10</string>

</resources>
