<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buttonLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nano_launcher_title_name"
            android:id="@+id/title_text"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/accent_material_dark"
            android:layout_weight="0.21" />

        .

        <Button
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer_btn_name"
            android:background="@drawable/launcher_button"
            android:id="@+id/spotify_streamer_btn"

            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_btn_name"
            android:background="@drawable/launcher_button"
            android:id="@+id/build_it_bigger_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/scores_app_btn_name"
            android:background="@drawable/launcher_button"
            android:id="@+id/scores_app_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/library_app_btn_name"
            android:background="@drawable/launcher_button"
            android:id="@+id/library_app_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_btn_name"
            android:background="@drawable/launcher_button"
            android:id="@+id/xyz_reader_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone_myApp_btn_name"
            android:id="@+id/capstone_app_btn"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/capstone_app_launch_button"
            android:layout_weight="0.20" />


    </LinearLayout>
</RelativeLayout>
